[ci] create-coo-subscription: use shell instead of command for redirected input

--- a/ci/create-coo-subscription.yaml
+++ b/ci/create-coo-subscription.yaml
@@ -8,7 +8,7 @@
     PATH: "{{ cifmw_path }}"
   tasks:
     - name: Create the COO subscription
-      ansible.builtin.command:
+      ansible.builtin.shell:
         cmd: |
           oc create -f - <<EOF
           apiVersion: operators.coreos.com/v1alpha1
